Error checking tidyup.
* Also added new buttons for the skip to next song and skip to previous.

--- a/MiniSpotify/MiniSpotify/MiniSpotify.csproj
+++ b/MiniSpotify/MiniSpotify/MiniSpotify.csproj
@@ -126,5 +126,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\NextSongButton.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
