Removed Client Secret from Source code, and make it read from file - Not tracking the file either.

--- a/MiniSpotify/MiniSpotify/MiniSpotify.csproj
+++ b/MiniSpotify/MiniSpotify/MiniSpotify.csproj
@@ -129,5 +129,8 @@
   <ItemGroup>
     <Resource Include="Assets\Images\NextSongButton.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Files\ClientSecret.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
