--- a/MiniSpotify/MiniSpotify/packages.config
+++ b/MiniSpotify/MiniSpotify/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EmbedIO" version="2.2.7" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
-  <package id="SpotifyAPI.Web" version="4.1.1" targetFramework="net472" />
-  <package id="SpotifyAPI.Web.Auth" version="4.1.0" targetFramework="net472" />
-  <package id="Unosquare.Swan.Lite" version="0.38.1" targetFramework="net472" />
+  <package id="EmbedIO" version="3.4.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="SpotifyAPI.Web" version="6.1.0" targetFramework="net472" />
+  <package id="SpotifyAPI.Web.Auth" version="6.1.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Unosquare.Swan.Lite" version="3.0.0" targetFramework="net472" />
 </packages>
